[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-agent-collector"
version = "0.2.6"
description = "Observable, extensible content collection foundation for CareerAgent"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "CareerAgent Collector contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["web/*.html", "web/static/*.css", "web/static/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  "app/modules/collection/providers/douyin/abogus.py",
  "app/modules/collection/providers/douyin/xbogus.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B008"]
